package org.example;

import java.util.LinkedList;
import java.util.List;

public class Administrator {


    public Administrator(String name, int id) {
        super();
    }

    private static LinkedList<Student> readTranscript(String path) {
        //TODO: read the transcript odf the students
        return null;
    }
}
