package org.example;

public interface Enrollable {
void enroll(Student s);
}
